--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 body {
     font-family: 'Muli', sans-serif;
     min-height: 100vh;
+    background-color: #d0d0d0;
 }
 .container {
     max-width: 90%;
